update battle room and using websocket for backend